fix overflow for mini-cards

--- a/src/Components/SubController/style.scss
+++ b/src/Components/SubController/style.scss
@@ -4,6 +4,7 @@
     margin-top: 0;
     position: relative;
     bottom: 20px;
+	overflow-y: hidden;
     overflow-x: scroll;
     scroll-behavior: smooth;
     justify-content: center;
